--- a/app/environment/test.yml
+++ b/app/environment/test.yml
@@ -12,7 +12,8 @@ parameters:
         dbname:         hal9000_test
 
     github.token: ''
-    github.baseurl: 'http://git/api/v3/'
+    github.app.id: ''
+    github.app.secret: ''
 
     logger.mcp.host: 'http://qlsonictest:2581/web/core/logentries'
 
