--- a/app/config.global.yml
+++ b/app/config.global.yml
@@ -52,6 +52,9 @@ parameters:
     # configuration
     ############################################################################
 
+    github.baseurl: 'http://git/api/v3/'
+    github.site.baseurl: 'http://git/'
+
     unique.alphabet: '123456789abcdefghijkmnopqrstuvwxyzABCDEFGHJKLMNPQRSTUVWXYZ'
     unique.size: 4
     date.timezone: 'America/Detroit'
