--- a/app/environment/prod.yml
+++ b/app/environment/prod.yml
@@ -12,7 +12,8 @@ parameters:
         dbname:         hal9000
 
     github.token: ''
-    github.baseurl: 'http://git/api/v3/'
+    github.app.id: ''
+    github.app.secret: ''
 
     logger.mcp.host: 'http://qlsonicprod:2581/web/core/logentries'
 
