Add initial stubs for encrypted property pages

--- a/app/di.pages.yml
+++ b/app/di.pages.yml
@@ -57,9 +57,9 @@ services:
         parent: 'twig.template'
         calls: [['setTemplate', ['queue.twig']]]
 
-    ######################################################################################################################
+    ####################################################################################################################
     # GROUP CONTROLLERS
-    ######################################################################################################################
+    ####################################################################################################################
 
     groups.page:
         class: 'QL\Hal\Controllers\Group\GroupsController'
@@ -123,9 +123,9 @@ services:
             - @slim.not.found
             - @slim.route.parameters
 
-    ######################################################################################################################
+    ####################################################################################################################
     # REPOSITORY CONTROLLERS
-    ######################################################################################################################
+    ####################################################################################################################
 
     repositories.page:
         class: 'QL\Hal\Controllers\Repository\RepositoriesController'
@@ -222,9 +222,9 @@ services:
             - @slim.not.found
             - @slim.route.parameters
 
-    ######################################################################################################################
+    ####################################################################################################################
     # REPOSITORY DEPLOYMENT CONTROLLERS
-    ######################################################################################################################
+    ####################################################################################################################
 
     repository.deployment.page:
         class: 'QL\Hal\Controllers\Repository\Deployment\DeploymentController'
@@ -339,9 +339,40 @@ services:
             - @slim.not.found
             - @slim.route.parameters
 
-    ######################################################################################################################
+    ####################################################################################################################
+    # REPOSITORY ENCRYPTED PROPERTIES CONTROLLERS
+    ####################################################################################################################
+
+    repository.encrypted.page:
+        class: 'QL\Hal\Controllers\Repository\EncryptedProperty\EncryptedPropertiesController'
+        arguments:
+            - @repository.encrypted.twig
+            - @encrypted.repo
+            - @repository.repo
+            - @slim.response
+            - @slim.not.found
+            - @slim.route.parameters
+    repository.encrypted.twig:
+        parent: 'twig.template'
+        calls: [['setTemplate', ['repository/encrypted/encrypted.properties.twig']]]
+
+    repository.encrypted.add.page:
+        class: 'QL\Hal\Controllers\Repository\EncryptedProperty\AddEncryptedPropertyController'
+        arguments:
+            - @repository.encrypted.add.twig
+            - @repository.repo
+            - @environment.repo
+            - @slim.request
+            - @slim.response
+            - @slim.not.found
+            - @slim.route.parameters
+    repository.encrypted.add.twig:
+        parent: 'twig.template'
+        calls: [['setTemplate', ['repository/encrypted/add.encrypted.property.twig']]]
+
+    ####################################################################################################################
     # BUILD CONTROLLERS
-    #####################################################################################################################
+    ####################################################################################################################
 
     build.page:
         class: 'QL\Hal\Controllers\Build\BuildController'
@@ -406,9 +437,9 @@ services:
         parent: 'twig.template'
         calls: [['setTemplate', ['build/builds.twig']]]
 
-    ######################################################################################################################
+    ####################################################################################################################
     # PUSH CONTROLLERS
-    ######################################################################################################################
+    ####################################################################################################################
 
     push.start.page:
         class: 'QL\Hal\Controllers\Push\StartPushController'
@@ -484,9 +515,9 @@ services:
         parent: 'twig.template'
         calls: [['setTemplate', ['push/pushes.twig']]]
 
-    ######################################################################################################################
+    ####################################################################################################################
     # ENVIRONMENT CONTROLLERS
-    ######################################################################################################################
+    ####################################################################################################################
 
     environments.page:
         class: 'QL\Hal\Controllers\Environment\EnvironmentsController'
@@ -573,9 +604,9 @@ services:
             - @url.helper
             - @slim.not.found
             - @slim.route.parameters
-    ######################################################################################################################
+    ####################################################################################################################
     # SERVER CONTROLLERS
-    ######################################################################################################################
+    ####################################################################################################################
 
     servers.page:
         class: 'QL\Hal\Controllers\Server\ServersController'
@@ -643,9 +674,9 @@ services:
             - @url.helper
             - @slim.not.found
             - @slim.route.parameters
-    ######################################################################################################################
+    ####################################################################################################################
     # USER CONTROLLERS
-    ######################################################################################################################
+    ####################################################################################################################
 
     user.page:
         class: 'QL\Hal\Controllers\User\UserController'
@@ -695,9 +726,9 @@ services:
             - %navigation.list%
             - @slim.request
 
-    ######################################################################################################################
+    ####################################################################################################################
     # USER TOKEN MANAGEMENT CONTROLLERS
-    ######################################################################################################################
+    ####################################################################################################################
 
     user.token.add.handler:
         class: 'QL\Hal\Controllers\User\Token\AddTokenController'
@@ -722,9 +753,9 @@ services:
             - @slim.not.found
             - @slim.route.parameters
 
-    ######################################################################################################################
+    ####################################################################################################################
     # ADMIN CONTROLLERS
-    ######################################################################################################################
+    ####################################################################################################################
 
     admin.dashboard.page:
         class: 'QL\Hal\Controllers\Admin\DashboardController'
@@ -826,9 +857,9 @@ services:
         parent: 'twig.template'
         calls: [['setTemplate', ['admin/dangerzone.cli.twig']]]
 
-    ######################################################################################################################
+    ####################################################################################################################
     # HELP CONTROLLERS
-    ######################################################################################################################
+    ####################################################################################################################
 
     help.page:
         parent: 'static.controller'
@@ -858,9 +889,9 @@ services:
         calls: [['setTemplate', ['help/hal.twig']]]
 
 
-    ######################################################################################################################
+    ####################################################################################################################
     # GITHUB OAUTH CONTROLLERS
-    ######################################################################################################################
+    ####################################################################################################################
 
     github.authorization.page:
         class: 'QL\Hal\Controllers\OAuth\GithubCallbackController'
@@ -892,9 +923,9 @@ services:
         parent: 'twig.template'
         calls: [['setTemplate', ['user/github.token.remove.twig']]]
 
-    ######################################################################################################################
+    ####################################################################################################################
     # GENERAL USE CONTROLLERS
-    ######################################################################################################################
+    ####################################################################################################################
 
     static.controller:
         class: 'QL\Hal\Controllers\StaticController'
