--- a/app/di.services.yml
+++ b/app/di.services.yml
@@ -52,6 +52,14 @@ services:
             - {prefix: '%redis.prefix%:'}
 
     ####################################################################################################################
+    # Crypto
+    ####################################################################################################################
+
+    encrypter:
+        class: 'QL\Hal\Core\Crypto\Encrypter'
+        arguments: [%encrypter.publickey%]
+
+    ####################################################################################################################
     # AWS
     ####################################################################################################################
 
