Add eternia-cloud to haladmin repos

--- a/app/config.global.yml
+++ b/app/config.global.yml
@@ -92,6 +92,7 @@ parameters:
     permissions.hal.repos:
         - 'hal9000'
         - 'hal9000-agent'
+        - 'eternia-cloud'
 
     ############################################################################
     # aws
