--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "ql/hal",
-    "description": "Web application for managing code pushes for UNIX-based projects",
+    "description": "Web application HAL 9000 deployment system",
     "license": "proprietary",
     "authors": [
         {
@@ -16,10 +16,6 @@
     },
     "repositories": [
         {
-            "type": "vcs",
-            "url": "git@git:web-core/hal-core.git"
-        },
-        {
             "type": "composer",
             "url": "http://composer/"
         }
@@ -33,7 +29,7 @@
         "predis/predis": "~1.0",
         "psr/log": "*",
         "ql/exception-toolkit": "~0.1",
-        "ql/hal-core": "dev-master",
+        "ql/hal-core": "2.5.*",
         "ql/http-problem": "~1.0",
         "ql/mcp-cache": "~2.2",
         "ql/mcp-core": "1.*",
