Add github permission change instructions to help page.

--- a/app/di.pages.yml
+++ b/app/di.pages.yml
@@ -901,6 +901,13 @@ services:
         parent: 'twig.template'
         calls: [['setTemplate', ['help/hal.twig']]]
 
+    help.githubpermissions.page:
+        parent: 'static.controller'
+        arguments: [@help.githubpermissions.twig, @slim.response]
+    help.githubpermissions.twig:
+        parent: 'twig.template'
+        calls: [['setTemplate', ['help/githubpermissions.twig']]]
+
 
     ####################################################################################################################
     # GITHUB OAUTH CONTROLLERS
