--- a/app/routes.yml
+++ b/app/routes.yml
@@ -125,7 +125,7 @@ parameters:
 
         help.githubpermissions:
             method: 'GET'
-            route: '/help/githubpermissions'
+            route: '/help/github-permissions'
             stack: ['help.githubpermissions.page']
 
         # help.api:
